--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "displayName": "settrade-python-sdk-snippet",
     "description": "Settrade OpenAPI Python SDK Code Snippet Generator",
     "version": "0.0.1",
+    "publisher": "theerapatcha",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:theerapatcha/settrade-python-sdk-snippet.git"
+    },
     "engines": {
         "vscode": "^1.52.0"
     },
